No overflow of img - unable to avoid horizontal scroll

--- a/starter-code/src/styles.css
+++ b/starter-code/src/styles.css
@@ -177,7 +177,7 @@ footer {
   }
 
   .equalizer-design {
-    right: -32px;
+    right: 0px;
     top: -38px;
     width: 266px;
     height: 400px;
